:bug:correction typing error visibility h2 menu

--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -2,7 +2,6 @@
     width: auto;
     background-color: $ground_colour;
     text-align: center;
-    overflow: hidden;
 
     &__h2 {
         position: relative;
